--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   },
   "homepage": "https://github.com/jws121295/webapp-auth-tutorial#readme",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.16.1",
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "express-session": "^1.15.1"
   }
 }
